src/objects/Apttus_Legacy_QuoteLines_READ_ONLY__c.object
<CustomObject>
    <description>Represents a product or service line item associated with a quote/proposal</description>
    <fields>
        <fullName>AdjustedPrice__c</fullName>
        <label>Adjusted Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdjustmentAmount__c</fullName>
        <label>AdjustmentA mount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdjustmentType__c</fullName>
        <label>Adjustment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Legacy_Quote__c</fullName>
        <label>Apttus Legacy Quote</label>
        <referenceTo>Apttus_Legacy_Quote__c</referenceTo>
        <relationshipLabel>Apttus Legacy Quote Lines</relationshipLabel>
        <relationshipName>Apttus_Legacy_Quote_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <label>Asset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetLineItemId__c</fullName>
        <label>Asset Line Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeValueId__c</fullName>
        <label>Attribute Value Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseCostOverride__c</fullName>
        <label>Base Cost Override</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseCost__c</fullName>
        <label>Base Cost</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseExtendedCost__c</fullName>
        <label>Base Extended Cost</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseExtendedPrice__c</fullName>
        <label>Base Extended Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BasePriceMethod__c</fullName>
        <label>Base Price Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BasePriceOverride__c</fullName>
        <label>Base Price Override</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BasePrice__c</fullName>
        <label>Base Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseProductId__c</fullName>
        <label>Base Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Price_1__c</fullName>
        <label>Base Price 1</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillToAccountId__c</fullName>
        <label>BillTo Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <label>Billing Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPlanId__c</fullName>
        <label>Billing Plan Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPreferenceId__c</fullName>
        <label>Billing Preference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingRule__c</fullName>
        <label>Billing Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_TemplateDisplaySection__c</fullName>
        <label>Template Display Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_TemplateDisplaySubsection__c</fullName>
        <label>Template Display Sub Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_TemplateProductCategory__c</fullName>
        <label>Template Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_Template_Display_Order__c</fullName>
        <label>Temaplate Display Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_Template_Display_Sequence__c</fullName>
        <label>Template Display Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_Template_Section__c</fullName>
        <label>Template Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_Template_Subsection__c</fullName>
        <label>Template Sub Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_Trigger_Cloudely_Workflow_Rules__c</fullName>
        <label>Trigger Cloudely Workflow Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeGroupId__c</fullName>
        <label>Charge Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargeType__c</fullName>
        <label>Charge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationHierarchy__c</fullName>
        <label>Classification Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationId__c</fullName>
        <label>Classification Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommitmentQuantity__c</fullName>
        <label>Commitment Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigurationId__c</fullName>
        <label>Configuration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumbers__c</fullName>
        <label>Contract Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Total_Cost__c</fullName>
        <label>Custom Total Cost</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DerivedFromId__c</fullName>
        <label>Derived From Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Net_Price__c</fullName>
        <label>Ext Net Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Price__c</fullName>
        <label>Ext Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExtendedCost__c</fullName>
        <label>Extended Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtendedDescription__c</fullName>
        <label>Extended Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtendedPrice__c</fullName>
        <label>Extended Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExtendedQuantity__c</fullName>
        <label>Extended Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlatOptionPrice__c</fullName>
        <label>Flat Option Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM__c</fullName>
        <label>GM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Product_Name__c</fullName>
        <label>GSA Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupAdjustmentPercent__c</fullName>
        <label>Group Adjustment Percent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidance__c</fullName>
        <label>Guidance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasAttributes__c</fullName>
        <label>Has Attributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptions__c</fullName>
        <label>Has Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Attributes__c</fullName>
        <label>Has Attributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideInvoiceDisplay__c</fullName>
        <label>Hide Invoice Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAssetPricing__c</fullName>
        <label>Is Asset Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCustomPricing__c</fullName>
        <label>Is Custom Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsOptionRollupLine__c</fullName>
        <label>Is Option Rollup Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPrimaryLine__c</fullName>
        <label>Is Primary Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPrimaryRampLine__c</fullName>
        <label>IsPrimary Ramp Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUsageTierModifiable__c</fullName>
        <label>Is Usage Tier Modifiable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Software_Service_Product__c</fullName>
        <label>Is Software Service Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemSequence__c</fullName>
        <label>Item Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Quote_Lines_ID__c</fullName>
        <label>Legacy Quote Lines ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineStatus__c</fullName>
        <label>Line Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <label>Location Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maint_Cost__c</fullName>
        <label>Maint Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Amount__c</fullName>
        <label>Maintenance Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer_1__c</fullName>
        <label>Manufacturer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetAdjustmentPercent__c</fullName>
        <label>Net Adjustment Percent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetPrice__c</fullName>
        <label>Net Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OptionCost__c</fullName>
        <label>Option Cost</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OptionId__c</fullName>
        <label>Option Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptionPrice__c</fullName>
        <label>Option Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverrideSupportLevel__c</fullName>
        <label>Override Support Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentBundleNumber__c</fullName>
        <label>Parent Bundle Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTermId__c</fullName>
        <label>Payment Term Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceAdjustmentAmount__c</fullName>
        <label>Price Adjustment Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceAdjustmentType__c</fullName>
        <label>Price Adjustment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceAdjustment__c</fullName>
        <label>Price Adjustment</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceGroup__c</fullName>
        <label>Price Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceIncludedInBundle__c</fullName>
        <label>Price Included In Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceListId__c</fullName>
        <label>Price List Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceListItemId__c</fullName>
        <label>Price List Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceMethod__c</fullName>
        <label>Price Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceType__c</fullName>
        <label>Price Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceUom__c</fullName>
        <label>Price Uom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_1_1__c</fullName>
        <label>Price List 1.1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingDate__c</fullName>
        <label>Price Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryLineNumber__c</fullName>
        <label>Primary Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Category__c</fullName>
        <label>Prood Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Sub_Type1__c</fullName>
        <label>Prod Sub Type 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Sub_Type__c</fullName>
        <label>Prod Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Type_1__c</fullName>
        <label>Prod Type 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Type__c</fullName>
        <label>Prod Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductOptionId__c</fullName>
        <label>Product Option Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_1__c</fullName>
        <label>Product Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Proposal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity2__c</fullName>
        <label>Quantity 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity3__c</fullName>
        <label>Quantity 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyForActivationDate__c</fullName>
        <label>Ready For Activation Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyForBillingDate__c</fullName>
        <label>Ready For Billing Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyForFulfillmentDate__c</fullName>
        <label>Ready For Fulfillment Dte</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyForRevRecDate__c</fullName>
        <label>Ready For RevRec Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIN__c</fullName>
        <label>SIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Discount__c</fullName>
        <label>Sales Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Category__c</fullName>
        <label>Sales Order Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_2__c</fullName>
        <label>Sales Tax 2</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SellingFrequency__c</fullName>
        <label>Selling Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingTerm__c</fullName>
        <label>Selling Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToAccountId__c</fullName>
        <label>Ship To Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SummaryGroupId__c</fullName>
        <label>Summary Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <label>Support Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_E_Amount__c</fullName>
        <label>Travel Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxCodeId__c</fullName>
        <label>Tax Code Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxInclusive__c</fullName>
        <label>Tax Inclusive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable_Item__c</fullName>
        <label>Taxable Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <label>Taxable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Product_Category__c</fullName>
        <label>Template Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discounted_Price__c</fullName>
        <label>Total Discounted Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Net_Price__c</fullName>
        <label>Unit Net Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uom__c</fullName>
        <label>Uom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Apttus Legacy QuoteLines - READ ONLY</label>
    <nameField>
        <label>Apttus Legacy QuoteLines - READ ONLY Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apttus Legacy Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>